Div wrapping problem fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -444,12 +444,19 @@ body {
 		width: 90rem;
 	}
 
-	.wrapper-flex {
+	.wrapper-inline-flex {
 		display: inline-flex;
 		flex-wrap: wrap;
 		flex-direction: row;
 		justify-content: center;
 		width: 90rem;
+	}
+
+	.wrapper-flex-row {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		max-width: 90rem;
 	}
 
 	/* Portfolio Containers */
@@ -512,9 +519,9 @@ body {
 		width: 100vw;	
 	}
 
-	/* Class to center all portfolio projects */
+	/* Class to center all portfolio divs */
 	.portfolio-project {
-		display: inline-flex;
+		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
 	}
